# mistralrs-server-core/src/chat_completion.rs
@@ -1051,6 +1051,7 @@ pub async fn parse_request(
             queued_at: None,
             messages,
             sampling_params: SamplingParams {
+                watermark: oairequest.watermark,
                 temperature: oairequest.temperature,
                 top_k: oairequest.top_k,
                 top_p: oairequest.top_p,
